# DullEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGES.txt  CMakeLists.txt  README.md  TODO.md  compile_flags.txt  makefile  premake5.lua  readme.txt  todo.txt
app/: ball.cpp  ball.hpp  config.hpp  constants.hpp  gol_grid.cpp  gol_grid.hpp  gol_render.cpp  gol_render.hpp  grid.cpp  grid.hpp  grid_render.cpp  grid_render.hpp  input_handler.cpp  input_handler.hpp  main.cpp  paddle.cpp  paddle.hpp  perceptron.hpp  perceptron_renderer.cpp  perceptron_renderer.hpp  pong_render.cpp  pong_render.hpp
engine/: config.hpp
engine/component/: audio.cpp  audio.hpp  timer.cpp  timer.hpp
engine/core/: app.cpp  app.hpp  constants.hpp  event.cpp  event.hpp  event_bus.cpp  event_bus.hpp  event_sys.cpp  event_sys.hpp  event_system.cpp  event_system.hpp  handle.cpp  handle.hpp  layer.cpp  layer.hpp  layer_buffer.cpp  layer_buffer.hpp  node.cpp  node.hpp  node_handle.cpp  node_handle.hpp  scene.cpp  scene.hpp  scene_buffer.cpp  scene_buffer.hpp  scene_sys.hpp  scene_system.cpp  scene_system.hpp
engine/misc/: app_builder.hpp  app_config.hpp  app_context.hpp  buffer.hpp  event_channel.hpp  identification.hpp  layer_builder.cpp  layer_builder.hpp  node_handle.cpp  node_handle.hpp  processor.hpp  render_call.cpp  render_call.hpp  scene_builder.cpp  scene_builder.hpp  string_view_hashing.hpp
engine/plugins/: audio_system.cpp  audio_system.hpp  global_system.hpp  physics_system.hpp  render_system.cpp  render_system.hpp  scene_system.cpp  scene_system.hpp  signal_system.cpp  signal_system.hpp  time_system.hpp
engine/process/: default_proc.cpp  default_proc.hpp  direct.cpp  direct.hpp  i_processor.hpp  layer.cpp  layer.hpp  layer_buffer.cpp  layer_buffer.hpp  node.cpp  node.hpp  node_handle.cpp  node_handle.hpp  scene.cpp  scene.hpp  scene_buffer.cpp  scene_buffer.hpp  scene_processor.cpp  scene_processor.hpp  scene_system.cpp  scene_system.hpp  world.cpp  world.hpp
engine/system/: audio_system.cpp  audio_system.hpp  event.cpp  event.hpp  event_sys.cpp  event_sys.hpp  event_system.cpp  event_system.hpp  render_system.cpp  render_system.hpp  system_handle.cpp  system_handle.hpp  time_sys.cpp  time_sys.hpp  time_system.cpp  time_system.hpp
engine/util/: audio_data.cpp  audio_data.hpp  color_rgba.hpp  rect.hpp  vec2.hpp  window_context.hpp
engine/utils/: color.hpp  debug.hpp  input.hpp  misc.hpp  rect.hpp  vec2.hpp
source/core/: app.cpp  app.hpp  constants.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp
source/plugins/: audio_system.cpp  audio_system.hpp  global_system.hpp  render_system.cpp  render_system.hpp  scene_system.cpp  scene_system.hpp  signal_system.cpp  signal_system.hpp  time_system.hpp
source/utils/: color.hpp  debug.hpp  misc.hpp  rect.hpp  vec2.hpp
template/component/: camera2d.hpp
template/grid/: numeric_grid.hpp  numeric_render.hpp  pixel_grid.hpp  pixel_render.hpp
tests/: main.cpp
utils/: color.hpp  rect.hpp  vec2.hpp
